@@ -1,4 +1,7 @@
 <?xml version="1.0" ?>
+
+<!-- $Id$ -->
+
 <makefile>
 
   <include file="config/tmpl_hrb.bkl"/>
